test/fail/action-as-definition.app
//Actions are only allowed in pages and templates.

application test

action test(s:String){
  
}